--- a/css-old/studio.css
+++ b/css-old/studio.css
@@ -100,6 +100,7 @@
 .feauture-name {
   margin-bottom: 10px;
 
+  color: var(--title-text-color);
   font-size: 14px;
   text-transform: uppercase;
 }
@@ -131,9 +132,9 @@
   width: 100%;
   padding-top: 27px;
   padding-bottom: 27px;
-  margin-bottom: 0;
 
   background-color: rgba(47, 48, 58, 0.8);
+
   font-size: 14px;
   text-align: center;
   text-transform: uppercase;
@@ -174,6 +175,7 @@
 .team-name {
   margin-bottom: 10px;
 
+  color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
