--- a/sass/components/_socials-list.scss
+++ b/sass/components/_socials-list.scss
@@ -25,19 +25,24 @@
 
 .socials-list-link.light-theme {
   color: #afb1b8;
+
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+
+    color: var(--primary-white-color);
+  }
 }
 
 .socials-list-link.dark-theme {
   background-color: rgba(255, 255, 255, 0.1);
 
   color: var(--primary-white-color);
-}
 
-.socials-list-link:hover,
-.socials-list-link:focus {
-  background-color: var(--accent-color);
-
-  color: var(--primary-white-color);
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+  }
 }
 
 .socials-list-icon {
