--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -24,13 +24,13 @@
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   color: #afb1b8;
-}
 
-.clients-list-link:hover,
-.clients-list-link:focus {
-  border-color: var(--accent-color);
+  &:hover,
+  &:focus {
+    border-color: var(--accent-color);
 
-  color: var(--accent-color);
+    color: var(--accent-color);
+  }
 }
 
 .clients-list-icon {
