--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -29,30 +29,30 @@
   font-weight: 500;
   letter-spacing: 0.02em;
   text-decoration: none;
-}
 
-.nav-link:hover,
-.nav-link:focus {
-  color: var(--accent-color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
 .nav-link.current {
   position: relative;
 
   color: var(--accent-color);
-}
 
-.nav-link.current::before {
-  position: absolute;
+  &::before {
+    position: absolute;
 
-  content: '';
-  width: 100%;
-  height: 4px;
-  bottom: 0;
-  left: 0;
+    content: '';
+    width: 100%;
+    height: 4px;
+    bottom: 0;
+    left: 0;
 
-  background-color: var(--accent-color);
-  border-radius: 2px;
+    background-color: var(--accent-color);
+    border-radius: 2px;
+  }
 }
 
 // ========== Contacts ==========
@@ -81,11 +81,11 @@
   letter-spacing: 0.02em;
   text-decoration: none;
   font-style: normal;
-}
 
-.contacts-header-link:hover,
-.contacts-header-link:focus {
-  color: var(--accent-color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
 .contacts-header-icon {
