--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -28,13 +28,13 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 1.63;
-}
 
-.portfolio-btn:hover,
-.portfolio-btn:focus {
-  background-color: var(--accent-color);
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
 
-  color: var(--primary-white-color);
+    color: var(--primary-white-color);
+  }
 }
 
 // ========== Portfolio List ==========
@@ -56,12 +56,12 @@
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   text-decoration: none;
-}
 
-.portfolio-list-link:hover,
-.portfolio-list-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 
 .portfolio-list-thumb {
@@ -84,11 +84,11 @@
   font-size: 18px;
   line-height: 1.56;
   color: var(--primary-white-color);
-}
 
-.portfolio-list-link:hover .portfolio-list-stick,
-.portfolio-list-link:focus .portfolio-list-stick {
-  transform: translateY(0);
+  .portfolio-list-link:hover &,
+  .portfolio-list-link:focus & {
+    transform: translateY(0);
+  }
 }
 
 .portfolio-label {
