--- a/css/main.css
+++ b/css/main.css
@@ -554,7 +554,7 @@ body {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop.is-hidden .modal {
+.backdrop.is-hidden > .modal {
   transform: translate(-50%, -50%) scale(0.8);
 }
 
